# opisto-etl

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
data/: sample_source.csv
src/opisto_etl/extract/: postgres_extractor.py
src/opisto_etl/load/: ftp_loader.py
src/opisto_etl/pipelines/: pipeline.py  pipeline_demo.py  pipeline_demo_standalone.py  pipeline_prod.py
src/opisto_etl/transform/: transform.py
tests/: conftest.py  test_loader.py  test_transform.py
